# HelpdeskMafia_v3_DomoSlackbot

./: .env  .gitignore  .python-version  .replit  Procfile  README.md  app.ipynb  app.py  app_v2.py  check_frontmatter.py  env_sample  manifest.json  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  runtime.txt  test.ipynb  test.py  utils.py  web_scraper.py
client/: MafiaError.py  ResponseGetData.py
core/: config.py  initialization.py
docs/: project.md  structure.md  technology.md
implementation/: Crawler.py  scraper.py  scraper_deprecated.py
listeners/: __init__.py
listeners/commands/: __init__.py  auth_test_command.py  backup_command.py  backup_history_command.py  question_command.py  scraper_command.py
listeners/events/: __init__.py  app_mention.py
listeners/messages/: __init__.py  hello_message.py  sample_message.py
routes/: __init__.py  base_routes.py  crawler.py  slack_routes.py
routes/services/: openai.py
services/client/: mafia.py
src/: __init__.py
src/apis/: __init__.py  openai.py  slack.py
src/bot/: index.ts
src/listeners/: __init__.py  index.ts
src/listeners/commands/: __init__.py  backup_command.py  question_command.py  update_news_canvas_command.py  upsert_canvas_command.py
src/routes/: __init__.py  base.py  openai.py  slack.py
src/services/: domo.py  openai.py  openai_agent.py  slack.py
src/utils/: pydantic.py  pydantic_agent_generator.py  slack.py  supabase.py
templates/: index.html
tests/: test.py  test_slack_auth.py
utils/: chunk_execution.py  chunking.py  convert.py  files.py  slack.py
(+21 files in other folders)
