[project]
name = "HelpdeskMafia_v3"
version = "1.0.0"

dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "aiohttp>=3.8",
    "domolibrary>=0.1",
    "fastapi>=0.95",
    "requests>=2.31",
    "slack-bolt>=1.16",
    "slack-sdk>=3.21",
    "uvicorn>=0.22"
]

[tool.black]
line-length = 125

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
